Fixed: Some popovers are too wide.

--- a/elvis/static/css/elvis-style.css
+++ b/elvis/static/css/elvis-style.css
@@ -524,9 +524,8 @@ th.header:hover {
 }
 .popover
 {
-    max-width: 600px;
+    max-width: 500px;
     width: auto;
-    margin-left:100px;
 }
 code
 {
